--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -547,7 +547,6 @@ form:
     customCodeTarget: "Target Select"
     description: "Description"
     detail: "Detail Form"
-    edit: "Edit Form"
     form: "Form"
     import: "Form IMPORT"
     importFile: "IMPORT File"
@@ -562,6 +561,7 @@ form:
     templatesList: "Templates List"
     title: "Form Designer"
     undo: "Undo"
+    update: "Update Form"
   msg:
     enterFormName: "Please enter a form name."
     failedAllColumnDelete: "At least one column is required."
@@ -850,9 +850,9 @@ process:
     publish: "Publish"
     use: "Use"
   title:
-    edit: "Zenius ITSM : Process Update"
     preview: "Zenius ITSM : Process Preview"
     processMap: "Zenius ITMS : Process Map"
+    update: "Zenius ITSM : Process Update"
   designer:
     element:
       annotation: "Annotation"
