#9679 프로세스/문서양식 title명 변경

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -547,6 +547,7 @@ form:
     customCodeTarget: "Target Select"
     description: "Description"
     detail: "Detail Form"
+    edit: "Edit Form"
     form: "Form"
     import: "Form IMPORT"
     importFile: "IMPORT File"
