--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -222,15 +222,27 @@ board:
 
 # Chart
 chart:
+  btn:
+    preview: "미리보기"
   label:
     all: "전체"
     chartList: "통계 차트 목록"
+    defaultInfo: "기본 정보"
     description: "차트 설명"
+    edit: "차트 편집"
     name: "차트 이름"
+    queryInfo: "쿼리 정보"
+    targetLabel: "대상 라벨"
     type: "차트 종류"
+    periodUnit: "간격"
+    operation: "연산"
+    duration: "기간"
   msg:
     searchDescription: "다양한 통계용 차트를 조회하고 관리합니다."
-  type:
+    enterChartName: "차트 이름을 입력하세요."
+    enterTargetLabel: "대상 라벨을 입력하세요."
+    enterDurationDigit: "기간을 입력하세요."
+  chart:
     basicLine: "Basic Line Chart"
     pie: "Pie Chart"
     stackedColumn: "Stacked Column Chart"
