#10083 통계 차트 관련 CRUD 진행

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -242,6 +242,7 @@ chart:
     enterChartName: "Please enter a chart name."
     enterTargetLabel: "Please enter a target label."
     enterDurationDigit: "Please enter a Duration."
+    periodUnitOutOfRange: "The duration is greater than the period."
   chart:
     basicLine: "Basic Line Chart"
     pie: "Pie Chart"
