--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -242,6 +242,7 @@ chart:
     enterChartName: "차트 이름을 입력하세요."
     enterTargetLabel: "대상 라벨을 입력하세요."
     enterDurationDigit: "기간을 입력하세요."
+    periodUnitOutOfRange: "간격이 기간보다 큽니다."
   chart:
     basicLine: "Basic Line Chart"
     pie: "Pie Chart"
