#10104 폼 디자이너 라벨링 체크박스 체크안하고 제거시 알림 필요.

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -47,6 +47,7 @@ common:
     confirmDelete: "Are you sure you want to delete?"
     dataSelect: "Please select data."
     delete: "Deleted."
+    deleteTartget: "Please select target."
     enterContents: "Please enter contents"
     enterTitle: "Please enter a title."
     fail: "Failed."
