--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -47,6 +47,7 @@ common:
     confirmDelete: "정말 삭제하시겠습니까?"
     dataSelect: "데이터를 선택하세요."
     delete: "삭제되었습니다."
+    deleteTartget: "삭제 대상을 선택하세요."
     enterContents: "내용을 입력하세요."
     enterTitle: "제목을 입력하세요."
     fail: "실패하였습니다."
