--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -89,6 +89,7 @@ auth:
     authDesc: "Auth Desc"
     authId: "Auth ID"
     authName: "Auth Name"
+    count: "{0} "
     menuList: "Usable Menu List"
     referenceCount: "Role Reference Count"
     urlList: "Usable Url"
