#9907 CI 문서번호 생성

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -329,6 +329,7 @@ cmdb:
       export: "Export"
   type:
     label:
+      alias: "Alias"
       management: "Type Management"
       searchPlaceholder: "Type"
       parentType: "Parent Type"
