#10097 [CI 컴포넌트] 태그 기능 추가

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -320,6 +320,7 @@ cmdb:
     msg:
       enterCiName: "CI 이름을 입력하세요."
       searchDescription: "CI를 조회 및 관리합니다."
+      tag: "태그를 입력하세요."
     btn:
       import: "가져오기"
       export: "내보내기"
