#10079 [CI 컴포넌트] CI 세부 화면

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -317,6 +317,7 @@ cmdb:
       type: "CI Type"
       register: "CI Register"
       update: "CI Update"
+      view: "CI View"
     msg:
       enterCiName: "Please enter a CI Name."
       searchDescription: "Add, view and manage CMDB CI."
