--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -317,6 +317,7 @@ cmdb:
       type: "CI 타입"
       register: "CI 등록"
       update: "CI 변경"
+      view: "CI 상세 조회"
     msg:
       enterCiName: "CI 이름을 입력하세요."
       searchDescription: "CI를 조회 및 관리합니다."
