DR Table 컴포넌트 열속성 동작 변경
- 컬럼(열)을 선택할때 해당 컬럼 속성이 출력됨.

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -638,7 +638,7 @@ form:
     dataAttribute: "Data Attribute"
     desc: "Description"
     display: "Display"
-    field: "Column Option"
+    drTableColumns: "Table Column"
     header: "Header"
     id: "ID"
     label: "Label"
@@ -660,7 +660,7 @@ form:
     datetimeMin: "Min Datetime"
     default: "Default"
     editorUseYn: "Editor Use"
-    field: "{0} Column"
+    drTableColumns: "{0} Column"
     height: "Height"
     isEditable: "Editable"
     isTopic: "is Topic"
