--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -638,7 +638,7 @@ form:
     dataAttribute: "컴포넌트 속성"
     desc: "설명"
     display: "출력속성"
-    field: "열 옵션"
+    drTableColumns: "테이블 컬럼"
     header: "헤더"
     id: "아이디"
     label: "라벨"
@@ -660,7 +660,7 @@ form:
     datetimeMin: "최소 일시"
     default: "기본값"
     editorUseYn: "에디터 사용여부"
-    field: "{0} 열"
+    drTableColumns: "{0} 열"
     height: "높이"
     isEditable: "편집가능 여부"
     isTopic: "미리보기"
