#10081 CI 조회 상세화면 구현 후 버그 수정 및 페이지 분리

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -356,8 +356,8 @@ cmdb:
       enterTypeAlias: "Please enter a Type Alias."
       enterTypeName: "Please enter a Type Name."
       selectType: "Please select a Type."
-      selectAvailableClass: "Please select a available Class.<br/>(not root)"
-      selectAvailableType: "Please select a available Type.<br/>(not root)"
+      selectAvailableClass: "Please select a available Class."
+      selectAvailableType: "Please select a available Type."
     btn:
       import: "Import"
       export: "Export"
