--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -356,8 +356,8 @@ cmdb:
       enterTypeAlias: "식별자를 입력하세요."
       enterTypeName: "Type 명을 입력하세요."
       selectType: "Type을 선택하세요."
-      selectAvailableClass: "유효한 Class를 선택하세요.<br/>(root 제외)"
-      selectAvailableType: "유효한 Type를 선택하세요.<br/>(root 제외)"
+      selectAvailableClass: "유효한 Class를 선택하세요."
+      selectAvailableType: "유효한 Type를 선택하세요."
     btn:
       import: "가져오기"
       export: "내보내기"
