#10189 [CI 컴포넌트] CI 선택 모달 - 미선택 후 확인 버튼을 누르면 경고창 표시

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -321,6 +321,7 @@ cmdb:
     msg:
       enterCiName: "Please enter a CI Name."
       searchDescription: "Add, view and manage CMDB CI."
+      selectCI: "Please select a CI."
       tag: "Please enter a tag."
     btn:
       import: "Import"
