--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -321,6 +321,7 @@ cmdb:
     msg:
       enterCiName: "CI 이름을 입력하세요."
       searchDescription: "CI를 조회 및 관리합니다."
+      selectCI: "CI를 선택하세요."
       tag: "태그를 입력하세요."
     btn:
       import: "가져오기"
