#10174 스케줄러 CRUD 구현 1. 스케줄러 메뉴 추가 2. 스케줄러 CRUD 기능 구현 3. 스키마 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -112,7 +112,11 @@ spring:
   datasource:
     #url: jdbc:log4jdbc:postgresql://10.0.10.175:32783/itsm
     url: jdbc:log4jdbc:postgresql://10.0.10.175:32784/itsm
-
+---
+spring:
+  profiles: lizeelf
+  datasource:
+    url: jdbc:log4jdbc:postgresql://10.0.10.175:32787/itsm
 ---
 # For brainz open
 spring:
