--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -595,6 +595,7 @@ form:
     undo: "Undo"
     update: "Update Form"
   msg:
+    duplicate: "Duplicate data cannot be included."
     enterFormName: "Please enter a form name."
     failedAllColumnDelete: "At least one column is required."
     failedFormDelete: "The document failed to delete the form. Please make sure that the application issued."
