#9661 권한화면내 inner-scroller내 right,padding값부여+ 역할화면도 권한화면과 동일한 layout 구성

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -957,6 +957,7 @@ role:
     selectAll: "SELECT ALL"
   label:
     auth: "Role Auth"
+    count: "total {0}"
     desc: "Role Desc"
     id: "Role Id"
     name: "Role Name"
