1. 즉시실행 기능 추가 2. 리스트화면 동적 데이터 링크 오류 수정 3. 공통 유틸 추가 (에러메시지)

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -71,6 +71,7 @@ common:
     selectBeforeDate: "Please select before {0} date."
     selectBeforeDateTime: "Please select before {0} datetime."
     selectBeforeTime: "Please select before {0} time."
+    success: "Successful."
     update: "Changed."
   code:
     token:
