--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -553,6 +553,7 @@ faq:
     title: "Title"
     view: "FAQ View"
   msg:
+    duplicateTitleInCategory: "Already Same Title In Category. Change Category Or Title."
     editDescription: "Register, edit or delete FAQ."
     portalDescription: "Search the FAQ."
     searchDescription: "View and manage FAQs."
