1. 스케줄 이력 기능 추가 2. 스케줄 목록 마지막 실행 결과 추가 (관련 쿼리 수정) 3. 스크립트 및 erd 수정 4. 스케줄 view 화면 추가

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -989,9 +989,13 @@ scheduler:
     cronExpression: "Cron Expression"
     description: "Description"
     edit: "Schedule Modify"
+    errorMessage: "Error Message"
     executeCycleType: "Execute Cycle Type"
     executeCyclePeriod: "Execute Cycle Period"
-    immediatelyExecution: "immediately Execution"
+    executeTime: "Execute Time"
+    history: "Schedule History"
+    historyNo: "No"
+    immediatelyExecute: "immediately Execute"
     lastExecuteTime: "Last Execute Time"
     name: "Scheduler Name"
     query: "Query"
@@ -1010,6 +1014,9 @@ scheduler:
   status:
     true: "Use"
     false: "UnUsed"
+  result:
+    true: "Success"
+    false: "Failed"
 
 # Token
 token:
