--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -984,9 +984,13 @@ scheduler:
     cronExpression: "Cron Expression"
     description: "Description"
     edit: "Schedule Modify"
+    errorMessage: "Error Message"
     executeCycleType: "Execute Cycle Type"
     executeCyclePeriod: "Execute Cycle Period"
-    immediatelyExecution: "immediately Execution"
+    executeTime: "Execute Time"
+    history: "Schedule History"
+    historyNo: "No"
+    immediatelyExecute: "immediately Execute"
     lastExecuteTime: "Last Execute Time"
     name: "Scheduler Name"
     query: "Query"
@@ -1005,6 +1009,9 @@ scheduler:
   status:
     true: "Use"
     false: "UnUsed"
+  result:
+    true: "Success"
+    false: "Failed"
 
 # Token
 token:
