--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -319,6 +319,9 @@ cmdb:
       update: "CI 변경"
       view: "CI 상세 조회"
     msg:
+      deleteEditableCI: "입력된 자산정보를 목록에서 삭제하시겠습니까?"
+      deleteReadableCI: "자산정보를 목록에서 삭제하시겠습니까?"
+      deleteInformation: "작성중인 자산정보 내용이 모두 삭제 됩니다."
       enterCiName: "CI 이름을 입력하세요."
       searchDescription: "CI를 조회 및 관리합니다."
       selectCI: "CI를 선택하세요."
