1. CMDB CI 임시 데이터 삭제 클래스 추가 2. 문구 변경

--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -993,7 +993,7 @@ scheduler:
     history: "스케줄 이력"
     historyNo: "No"
     immediatelyExecute: "즉시 실행"
-    lastExecuteTime: "마지막 실행 시간"
+    lastExecuteTime: "마지막 실행 시각"
     name: "스케줄 명"
     query: "쿼리"
     register: "스케줄 등록"
