결함 #10037 프로세스, 문서양식에서 사용 상태 문서는 폐기 할 수 없다.
- 폐기 상태로 수정 가능한 버튼 추가(사용 상태에 한해)
- 폐기 처리 시, 관련 문서 여부 체크

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -602,6 +602,7 @@ form:
   msg:
     enterFormName: "Please enter a form name."
     failedAllColumnDelete: "At least one column is required."
+    failedDestroy: "Related documents exist for this form.<br/>This can't be destroyed."
     failedFormDelete: "The document failed to delete the form. Please make sure that the application issued."
     fileSelect: "Please select a file."
     information: "There are no common editable component detail attributes."
@@ -880,6 +881,7 @@ process:
   msg:
     duplicateData: "The same data exists."
     enterProcessName: "Please enter a process name."
+    failedDestroy: "Related documents exist for this process.<br/>This can't be destroyed."
     noticeImportFile: "Import only possible in XML file"
     searchDescription: "View and manage processes."
     selectImportFile: "Please select an import file."
