--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -602,6 +602,7 @@ form:
   msg:
     enterFormName: "양식이름을 입력하세요."
     failedAllColumnDelete: "최소 1개 열은 필수입니다."
+    failedDestroy: "관련 문서가 존재합니다.<br/>폐기할 수 없는 문서양식입니다."
     failedFormDelete: "문서양식을 삭제할 수 없습니다. 발행된 신청서가 있는 지 확인하세요."
     fileSelect: "파일을 선택하세요."
     information: "공통 편집 가능한 컴포넌트 세부 속성이 존재하지 않습니다."
@@ -878,8 +879,8 @@ process:
     title: "Process Designer"
     undo: "작업취소"
   msg:
-    duplicateData: "동일한 데이터가 존재합니다."
     enterProcessName: "프로세스 이름을 입력하세요."
+    failedDestroy: "관련 문서가 존재합니다.<br/>폐기할 수 없는 프로세스입니다."
     noticeImportFile: "IMPORT시, XML파일만 가능합니다."
     searchDescription: "프로세스를 조회 및 관리합니다."
     selectImportFile: "IMPORT 파일을 선택하세요."
