#9605 이미지관리화면 스크롤 데이터로 변환(버그 및 소스컨벤션 수정)

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -721,6 +721,7 @@ image:
     existNotAllowedExtension: "There is a file that does not allow extension. Are you sure you want to exclude and proceed with the upload?"
     failedRename: "File name change failed. Please check if the file name is the same or that you have permission to modify."
     fileSelect: "Please select a file."
+    registrationSuccess: "Image Registration Success."
     searchDescription: "Add, view and manage images to be used in forms."
 
 # Login
