--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -245,6 +245,7 @@ chart:
     targetLabel: "Target Label"
     type: "Chart Type"
     periodUnit: "PeriodUnit"
+    previewTitle: "Count by type of failure"
     operation: "Operation"
     duration: "Duration"
     group: "Group"
