#9681 프로세스 포커싱 관련 수정(박현철 차장님 피드백 적용)

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -49,6 +49,7 @@ common:
     dataSelect: "Please select data."
     delete: "Deleted."
     deleteTartget: "Please select target."
+    emptyValue: "Please check required value"
     enterContents: "Please enter contents"
     enterTitle: "Please enter a title."
     fail: "Failed."
