#10087 동적 차트 데이터로 차트 그리기 Commit

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -245,7 +245,7 @@ chart:
     targetLabel: "Target Label"
     type: "Chart Type"
     periodUnit: "PeriodUnit"
-    previewTitle: "Count by type of failure"
+    viewTitle: "Count by type of failure"
     operation: "Operation"
     duration: "Duration"
     group: "Group"
