--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -245,7 +245,7 @@ chart:
     targetLabel: "대상 라벨"
     type: "차트 종류"
     periodUnit: "간격"
-    previewTitle: "장애 유형별 카운트"
+    viewTitle: "장애 유형별 카운트"
     operation: "연산"
     duration: "기간"
     group: "그룹"
