--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -222,6 +222,7 @@ board:
     adminSearchDescription: "게시판을 조회 및 관리합니다."
     adminViewDescription: "게시판에 대한 상세 정보를 조회합니다."
     createDescription: "글을 추가 할 수 있습니다."
+    duplicateBoardAdminTitle : "동일한 게시판명이 존재합니다.<br>게시판 명을 확인해주세요."
     editDescription: "게시글을 등록하거나 수정, 삭제합니다."
     enterAttachFileSize: "첨부파일 용량을 0MB 초과 1024MB 이하로 입력하세요."
     enterBoardTitle: "게시판 명을 입력하세요."
