#10087 동적 차트 데이터로 차트 그리기

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -254,6 +254,7 @@ chart:
   msg:
     searchDescription: "View and manage various statistical charts."
     enterChartName: "Please enter a chart name."
+    enterTargetGroup: "Please enter a target Group."
     enterTargetLabel: "Please enter a target label."
     enterDurationDigit: "Please enter a Duration."
     periodUnitOutOfRange: "The duration is greater than the period."
