--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -25,6 +25,7 @@ common:
     blank: " "
     comment: "Comment"
     contents: "Contents"
+    colon: ":"
     count: "total {0}"
     createDate: "Create Date"
     createUser: "Create User"
@@ -251,6 +252,12 @@ chart:
     operation: "Operation"
     duration: "Duration"
     group: "Group"
+    docCases: "Documents Cases"
+    docRatio: "Documents Ratio"
+  option:
+    label:
+      subTitle: "Statistics chart report"
+      yAxisTitle: "Number of Documents"
   msg:
     searchDescription: "View and manage various statistical charts."
     enterChartName: "Please enter a chart name."
