#10333 [highcharts] 데이터 없을때 빈 차트 출력

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -252,6 +252,7 @@ chart:
     operation: "Operation"
     duration: "Duration"
     group: "Group"
+    doc: "Document"
     docCases: "Documents Cases"
     docRatio: "Documents Ratio"
   option:
