#10257 폼 리팩토링 - 레이아웃 구성

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -643,6 +643,8 @@ form:
     label: "Label"
     radio: "Radio Button"
     textbox: "Text Box"
+    textarea: "Text Box"
+    text-editor: "Text Editor"
     time: "Time"
     ci: "CI"
   help:
