#10126 CMDB CI 히스토리 조회

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -315,17 +315,25 @@ cmdb:
       register: "Add"
     label:
       all: "All"
+      applyDate: "Apply Date"
       ciNo: "CI No."
       ciInquiry: "CI Inquiry"
+      createUser: "Create User"
       delete: "CI Delete"
       description: "CI Description"
       existing: "Existing"
       export: "Export"
+      history: "History"
       name: "CI Name"
       new: "New"
+      relatedDocument: "Related document"
       searchPlaceholder: "CI No / CI Type / CI Name / Description"
       select: "CI Select"
       seqNum: "CI No"
+      status:
+        delete: "delete"
+        tyoe: "status"
+        use: "use"
       tag: "Tag"
       tagPlaceholder: "#Tag"
       type: "CI Type"
