--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -315,17 +315,25 @@ cmdb:
       register: "신규"
     label:
       all: "전체"
+      applyDate: "반영 일시"
       ciNo: "CI No."
       ciInquiry: "CI 조회"
+      createUser: "등록자"
       delete: "CI 삭제"
       description: "CI 설명"
       existing: "기존"
       export: "내보내기"
+      history: "변경 이력"
       name: "CI 이름"
       new: "신규"
+      relatedDocument: "관련 문서"
       searchPlaceholder: "CI No / CI 타입 / CI 이름 / 설명"
       select: "CI 선택"
       seqNum: "CI No"
+      status:
+        delete: "삭제"
+        type: "상태"
+        use: "사용"
       tag: "태그"
       tagPlaceholder: "#태그"
       type: "CI 타입"
