--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -246,7 +246,7 @@ chart:
     edit: "Chart Edit"
     name: "Chart Name"
     querryInfo: "Query Info"
-    targetLabel: "Target Label"
+    targetLabels: "Target Labels"
     type: "Chart Type"
     periodUnit: "PeriodUnit"
     viewTitle: "Count by type of failure"
@@ -264,7 +264,7 @@ chart:
     searchDescription: "View and manage various statistical charts."
     enterChartName: "Please enter a chart name."
     enterTargetGroup: "Please enter a target Group."
-    enterTargetLabel: "Please enter a target label."
+    enterTargetLabels: "Please enter a target labels."
     enterDurationDigit: "Please enter a Duration."
     periodUnitOutOfRange: "The duration is greater than the period."
   chart:
