--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -902,6 +902,7 @@ process:
     undo: "작업취소"
   msg:
     duplicateProcessName: "중복되는 프로세스 명이 있습니다.<br>다른 프로세스 명을 입력하세요."
+    enterRequired: "{0} 필수값이 비어있습니다.<br>필수값을 입력해주세요."
     enterProcessName: "프로세스 이름을 입력하세요."
     failedDestroy: "관련 문서가 존재합니다.<br/>폐기할 수 없는 프로세스입니다."
     noticeImportFile: "IMPORT시, XML파일만 가능합니다."
