#10390 프로세스와폼디자이너에서 발행/사용 상태일 경우 편집불가하도록 수정

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -61,6 +61,7 @@ common:
     number: "Please enter only numbers."
     modify: "Modified."
     noData: "There is no data."
+    onlySaveInEdit: "It cannot be saved in the publish/edit. Please edit in the edit"
     processedOrDelete: "Already processed or deleted."
     register: "Registered."
     required: "Please enter {0}."
