--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -61,6 +61,7 @@ common:
     number: "숫자만 입력하세요."
     modify: "수정되었습니다."
     noData: "데이터가 없습니다."
+    onlySaveInEdit: "발행/사용 단계에서는 수정이 불가합니다.<br>편집상태로 변경후 수정하세요."
     processedOrDelete: "이미 처리되었거나 삭제되었습니다."
     register: "등록되었습니다."
     required: "{0} 을(를) 입력하세요."
