--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -677,19 +677,55 @@ form:
     text-default: "컴포넌트에 표시되는 기본값을 직접입력하거나, 자동입력 중 선택할 수 있습니다. 자동입력일 경우 사용자의 세션 정보 중 하나를 선택할 수 있습니다."
     time-default: "컴포넌트에 표시되는 기본값을 설정할 수 있습니다.<br/>'None'을 선택하는 경우 기본 값은 출력되지 않습니다.<br/>'Now'로 선택하는 경우 해당 신청서 작성 시점의 시간이 기본 값으로 출력됩니다.<br/>'hours later'로 선택하고 숫자로 된 값을 넣으면 문서를 작성하는 시점을 기준으로 해당 숫자만큼 이후의 시간이 기본 값으로 사용됩니다. 마이너스 값을 입력하는 경우 이전 시간을 지정할 수 있습니다.<br/>마지막 항목은 특정 시간을 고정으로 표시할 경우 사용하시면 됩니다."
   properties:
+    align: "정렬"
+    auto: "자동"
+    char: "문자"
+    columnWidth: "컬럼 너비"
     common: "공통"
     dataAttribute: "컴포넌트 속성"
+    defaultType: "기본값 타입"
+    department: "부서"
     desc: "설명"
+    direct: "직접"
     display: "출력속성"
     drTableColumns: "테이블 컬럼"
+    element: "엘리먼트"
+    email: "Email"
+    fontColor: "색상"
+    fontOption: "옵션"
+    fontSize: "크기"
     header: "헤더"
     id: "아이디"
+    isAccordionUsed: "아코디언 사용 여부"
+    isTopic: "미리보기"
+    jobPosition: "직책"
     label: "라벨"
+    lengthMax: "최대길이"
+    lengthMin: "최소길이"
+    mapId: "매핑 아이디"
+    margin: "Margin"
+    mobileNumber: "핸드폰 번호"
     name: "이름"
+    none: "없음"
+    number: "숫자"
+    officeNumber: "사무실 번호"
     option: "옵션"
+    padding: "Padding"
+    phone: "전화번호"
+    placeholder: "Placeholder"
+    position: "위치"
     status: "상태"
+    tags: "태그"
+    text: "내용"
     title: "폼"
+    userId: "사용자 아이디"
+    userKey: "사용자 키"
+    userName: "사용자 이름"
     validate: "유효성"
+    validateType: "유효성 타입"
+    visibility: "표시 여부"
+    width: "너비"
+  #TODO: form 리팩토링 후 attribute 삭제 예정
   attribute:
     align: "정렬"
     border: "테두리 색상"
