--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -702,7 +702,7 @@ form:
     height: "높이"
     isEditable: "편집가능 여부"
     isTopic: "미리보기"
-    labelList: "컴포넌트 라벨"
+    tag: "태그"
     lengthMax: "최대길이"
     lengthMin: "최소길이"
     mappingId: "매핑 아이디"
@@ -909,6 +909,7 @@ process:
     undo: "작업취소"
   msg:
     duplicateProcessName: "중복되는 프로세스 명이 있습니다.<br>다른 프로세스 명을 입력하세요."
+    duplicateData: "동일한 데이터가 존재합니다."
     enterRequired: "{0} 필수값이 비어있습니다.<br>필수값을 입력하세요."
     enterProcessName: "프로세스 이름을 입력하세요."
     failedDestroy: "관련 문서가 존재합니다.<br/>폐기할 수 없는 프로세스입니다."
