#10493 WF 외부 API 처리 구현 - 인증, 문서정보 조회WF 외부 API 처리 구현 - 문서등록 1. instance 생성시 itsm, api 구분 컬럼 추가 2. 외부 호출시 session 관련 이슈 수정 (wf_api_token.request_user_key) 3. 업무흐름 등록시 API 활성화 옵션 추가 (활성화 된 문서만 API 정상 처리) 4. 단순문의 요청 데이터 작성 후 문서 등록 진행 (정상 등록 확인)

--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -490,13 +490,16 @@ department:
 document:
   label:
     all: "All"
+    apiEnable: "API Enable"
     businessFlowColor: "Business Flow Color"
     businessFlow: "Business Flow"
     description: "Service Request Description"
+    disable: "Disable"
     display: "Service Request Display"
     docNo: "Service Request No"
     document: "Service Request"
     edit: "Service Request Edit"
+    enable: "Enable"
     form: "Form"
     icon: "Service Request Icon"
     name: "Service Request Name"
