--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -400,7 +400,10 @@ code:
   label:
     code: "코드"
     codeValue: "코드 값"
+    defaultCodeValue: "기본 코드 값"
     description: "코드 설명"
+    lang : "언어"
+    langCode: "다국어 코드"
     name : "코드 이름"
     pCode: "부모 코드"
     searchPlaceholder: "코드"
@@ -410,8 +413,10 @@ code:
     editDescription: "코드를 추가하거나 조회 및 관리합니다."
     enterCode: "코드를 입력하세요."
     enterPCode: "부모 코드를 입력하세요."
+    enterLangCodeValue: "다국어 코드 값을 입력하세요."
     pCodeNotExist: "부모 코드가 존재하지 않습니다."
     referenceCodeExist: "해당 코드를 참조하는 코드가 존재합니다."
+    selectNotDuplicateLang: "중복된 다국어 옵션이 존재합니다."
 
 # Comment
 comment:
