--- a/src/main/resources/public/message/messages_en.yml
+++ b/src/main/resources/public/message/messages_en.yml
@@ -45,7 +45,6 @@ common:
     writeDate: "Write Date"
     writer: "Writer"
   msg:
-    char: "Please enter only characters."
     confirmDelete: "Are you sure you want to delete?"
     dataSelect: "Please select data."
     delete: "Deleted."
@@ -54,11 +53,6 @@ common:
     enterContents: "Please enter contents"
     enterTitle: "Please enter a title."
     fail: "Failed."
-    max: "Please enter below {0}."
-    maxLength: "Please enter less than {0} characters."
-    min: "Please enter at least {0}."
-    minLength: "Please enter at least {0} characters."
-    number: "Please enter only numbers."
     modify: "Modified."
     noData: "There is no data."
     processedOrDelete: "Already processed or deleted."
@@ -1193,17 +1187,26 @@ user:
 # Validation
 validation:
   msg:
+    char: "Please enter only characters."
     checkEmailFormat: "Please enter the correct email format."
     checkImportFormat: "Please select an IMPORT file that matches the format."
     checkRgbFormat: "Please enter the correct RGB format."
     checkUserIdFormat: "Please enter the correct userId format."
     dataNotDuplicate: "Duplicate data cannot be included."
     elementNotExist: "The element does not exist."
+    integer: "Please enter only integer."
+    max: "Please enter below {0}."
+    maxLength: "Please enter less than {0} characters."
+    min: "Please enter at least {0}."
+    minLength: "Please enter at least {0} characters."
+    number: "Please enter only numbers."
     pwContainsEmail: "Password contains an email ID."
     pwContainsId: "Password contains an ID."
     pwNotContainSpace: "Password cannot contain spaces."
     pwOneBetween10And20: "For one character configurations, you must set a password between 10 and 20 characters."
     pwTwoBetween8And20: "For a two character configuration, you must set a password between 8 and 20 characters."
+    required: "Please enter {0}."
+    specialChar: "Please enter only special characters."
     unacceptableCharacters: "Contains special characters (/ \ % ;) that are not allowed."
 
 # Project
