--- a/src/main/resources/public/message/messages_ko.yml
+++ b/src/main/resources/public/message/messages_ko.yml
@@ -45,7 +45,6 @@ common:
     writeDate: "작성 일시"
     writer: "작성자"
   msg:
-    char: "문자만 입력하세요."
     confirmDelete: "정말 삭제하시겠습니까?"
     dataSelect: "데이터를 선택하세요."
     delete: "삭제되었습니다."
@@ -54,11 +53,6 @@ common:
     enterContents: "내용을 입력하세요."
     enterTitle: "제목을 입력하세요."
     fail: "실패하였습니다."
-    max: "{0} 이하로 입력하세요."
-    maxLength: "{0}글자 이하로 입력하세요."
-    min: "{0} 이상 입력하세요."
-    minLength: "{0}글자 이상 입력하세요."
-    number: "숫자만 입력하세요."
     modify: "수정되었습니다."
     noData: "데이터가 없습니다."
     processedOrDelete: "이미 처리되었거나 삭제되었습니다."
@@ -1195,17 +1189,26 @@ user:
 # Validation
 validation:
   msg:
+    char: "문자만 입력하세요."
     checkEmailFormat: "이메일 형식에 맞게 입력하세요."
     checkImportFormat: "형식에 맞는 IMPORT 파일을 선택하세요."
     checkRgbFormat: "RGB 형식에 맞게 입력하세요."
     checkUserIdFormat: "사용자 아이디 형식에 맞게 입력해주세요."
     dataNotDuplicate: "중복된 데이터는 포함할 수 없습니다."
     elementNotExist: "해당 엘리먼트 요소는 존재하지 않습니다."
+    integer: "정수만 입력하세요."
+    max: "{0} 이하로 입력하세요."
+    maxLength: "{0}글자 이하로 입력하세요."
+    min: "{0} 이상 입력하세요."
+    minLength: "{0}글자 이상 입력하세요."
+    number: "숫자만 입력하세요."
     pwContainsEmail: "비밀번호에 이메일 아이디가 포함되어 있습니다."
     pwContainsId: "비밀번호에 아이디가 포함되어 있습니다."
     pwNotContainSpace: "비밀번호에 공백을 포함할 수 없습니다."
     pwOneBetween10And20: "1가지 문자 구성의 경우 10자~20자의 비밀번호를 설정해야 합니다."
     pwTwoBetween8And20: "2가지 문자 구성의 경우 8자~20자의 비밀번호를 설정해야 합니다."
+    required: "{0} 을(를) 입력하세요."
+    specialChar: "특수문자만 입력하세요."
     unacceptableCharacters: "허용하지 않는 특수문자(/ \ % ;)가 포함되어 있습니다."
 
 # Project
